package com.codegym;

interface Resizeable {
    void resize(double percent);
}